# zkt-plonk

./: .gitignore  Cargo.toml  Makefile  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: plonk.rs
circuits/: Cargo.toml
circuits/src/: lib.rs  withdraw.rs
examples/: example_poly.rs  simple_circuit.rs
gadgets/: Cargo.toml
gadgets/src/: lib.rs  merkle_tree.rs  note.rs  transcript.rs
gadgets/src/poseidon/: bn254_x3.rs  bn254_x4.rs  bn254_x5.rs  mod.rs
plonk-core/: Cargo.toml
plonk-core/src/: commitment.rs  error.rs  lib.rs  plonk.rs  plonkup.rs  prelude.rs  test.rs  transcript.rs  util.rs
plonk-core/src/constraint_system/: arithmetic.rs  boolean.rs  composer.rs  helper.rs  lookup.rs  mod.rs  uint.rs  variable.rs
plonk-core/src/lookup/: custom.rs  lookup_table.rs  mod.rs  multiset.rs  table.rs
plonk-core/src/permutation/: constants.rs  mod.rs
plonk-core/src/proof_system/: linearisation_poly.rs  linearization_poly.rs  mod.rs  pi.rs  proof.rs  prove.rs  quotient_poly.rs  setup.rs
plonk-core/src/proof_system/keys/: arithmetic.rs  lookup.rs  mod.rs  permutation.rs
plonk-hashing/: Cargo.toml
plonk-hashing/src/: lib.rs
plonk-hashing/src/hasher/: mod.rs  uint8.rs
plonk-hashing/src/hasher/poseidon/: constants.rs  mds.rs  mod.rs  preprocessing.rs  round_constant.rs  spec.rs
plonk-hashing/src/hasher/sha256/: mod.rs  uint32.rs  utils.rs
plonk-hashing/src/merkle/: binary.rs  mod.rs
plonk-hashing/src/sha256/: mod.rs  uint32.rs
plonk-hashing/src/sha256/uint/: mod.rs  uint32.rs  uint8.rs
plonkup-core/: Cargo.toml
plonkup-core/src/: commitment.rs  lib.rs  plonkup.rs  test.rs  transcript.rs  util.rs
plonkup-core/src/constraint_system/: arithmetic.rs  composer.rs  helper.rs  lookup.rs  mod.rs  pi.rs  variable.rs
plonkup-core/src/lookup/: custom.rs  mod.rs  multiset.rs  table.rs
plonkup-core/src/permutation/: constants.rs  mod.rs
plonkup-core/src/proof_system/: linearisation_poly.rs  mod.rs  proof.rs  prove.rs  quotient_poly.rs  setup.rs
plonkup-core/src/proof_system/keys/: arithmetic.rs  lookup.rs  mod.rs  permutation.rs
plonkup-hashing/: Cargo.toml
plonkup-hashing/src/: lib.rs
plonkup-hashing/src/hasher/: mod.rs  uint8.rs
plonkup-hashing/src/hasher/sha256/: mod.rs  uint32.rs  utils.rs
plonkup-hashing/src/merkle/: binary.rs  mod.rs
plonkup-hashing/src/sha256/: mod.rs
plonkup-hashing/src/sha256/uint/: mod.rs  uint32.rs  uint8.rs
privacy-pools/: Cargo.toml
privacy-pools/src/: circuit.rs  lib.rs
src/: lib.rs
utils/: Cargo.toml
utils/src/: lib.rs  merkle_tree.rs
wasm/: Cargo.toml
