[package]
name = "zkt-plonk"
version = "0.0.1"
authors = ["ZK-GARAGE Authors", "Lone G"]
readme = "README.md"
repository = "https://github.com/ZKTNetwork/zkt-plonk"
keywords = ["plonk", "zk-snarks", "privacy", "compliance"]
categories =["algorithms", "cryptography"]
description = "A Plonkish ZK-SNARK implementation of the ZKT Protocol."
license = "MPL"
edition = "2021"
include = ["src", "LICENSE-*", "README.md"]

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[workspace]
resolver = "2"
members = ["plonk-core", "plonk-hashing"]

[dependencies]
circuits = { path = "./circuits" }
wasm = { path = "./wasm" }
plonk-core = { path = "./plonk-core" }
plonk-hashing = { path = "./plonk-hashing" }

[dev-dependencies]
ark-ff = "0.3"
ark-sponge = "0.3"
ark-std = "0.3"
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
ark-ec = "0.3"
ark-ed-on-bls12-377 = "0.3"
ark-ed-on-bls12-381 = "0.3"
ark-poly = "0.3"
ark-poly-commit = "0.3"
blake2 = "0.9"
criterion = "0.3"
derivative = "2.2.0"
paste = "1.0.6"
rand_core = { version = "0.6", default-features=false, features = ["getrandom"] }
tempdir = "0.3"
ark-vesta = "0.3"

#[[bench]]
#name = "zkt-plonk"
#harness = false
#
#[profile.bench]
#codegen-units = 1
#debug = false
#debug-assertions = false
#incremental = false
#lto = "thin"
#opt-level = 3
#overflow-checks = false
#rpath = false
