[package]
name = "plonk-core"
version = "0.1.0"
authors = ["ZK-GARAGE Authors", "Lone G"]
readme = "README.md"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONKUP ZK-SNARKs algorithm."
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-poly-commit = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
blake2 = { version = "0.9.2", default-features = false }
backtrace = { version = "0.3.69", optional = true, default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
indexmap = { version = "2.2.2", default-features = false }
itertools = { version = "0.12.1", default-features = false }
merlin = { version = "3.0.0", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
rayon = { version = "1.8.1", optional = true }
thiserror = "1.0.56"

[dev-dependencies]
ark-bn254 = "0.3.0"
ark-bls12-377 = "0.3.0"
ark-bls12-381 = "0.3.0"
proptest = "1.4.0"
paste = "1.0.14"
tempdir = "0.3.7"
cfg-if = "1.0.0"

[features]
# Default Features
default = ["std", "asm", "parallel"]
# Enable Standard Library
std = [
    "ark-std/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-poly-commit/std",
    "ark-serialize/std",
    "blake2/std",
    "backtrace/std",
    "indexmap/std",
    "itertools/use_std",
    "merlin/std",
    "num-traits/std",
    "rand_core/std",
]
# Raw Assembly
asm = ["ark-ff/asm"]
# Parallelism Features
parallel = [
    "rayon",
    "ark-std/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-poly-commit/parallel",
]
# Trace
trace = ["backtrace", "ark-std/print-trace", "ark-poly-commit/print-trace"]
