[package]
name = "plonk-hashing"
version = "0.8.2"
authors = ["ZK-GARAGE Authors"]
readme = "README.md"
repository = "https://github.com/zk-garage/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
plonk-core = { path = "../plonk-core" }
ark-ff = "0.3"
ark-std = { version = "0.3", features = ["std"] }
ark-ec = { version = "0.3", default-features = false }
itertools = "0.10.5"

[dev-dependencies]
ark-bn254 = "0.3"
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
paste = "1.0.6"
assert_matches = "1.5"

[features]