[package]
name = "plonk-hashing"
version = "0.1.0"
authors = ["ZK-GARAGE Authors", "Lone G"]
readme = "README.md"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
plonk-core = { path = "../plonk-core" }
ark-ec = "0.3"
ark-ff = "0.3"
ark-poly = "0.3"
ark-poly-commit = { version = "0.3", default-features = false }
ark-serialize = { version = "0.3", features = ["derive"] }
ark-std = { version = "^0.3.0", default-features = false }
itertools = { version = "0.10.1", default-features = false }
num-traits = "0.2.14"
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
thiserror = "1.0.30"

[dev-dependencies]
ark-bn254 = "0.3"
ark-bls12-381 = "0.3"
bitvec = "1.0.0"

[features]
default = ["std", "asm", "itertools/default", "parallel"]
std = [
    "ark-std/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-poly-commit/std",
    "ark-serialize/std",
    "plonk-core/std"
]
asm = ["ark-ff/asm", "plonk-core/asm"]
parallel = [
    "ark-std/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-poly-commit/parallel",
    "plonk-core/parallel",
]
trace = ["ark-std/print-trace", "plonk-core/trace"]
