[package]
name = "plonk-hashing"
version = "0.1.0"
authors = ["ZK-GARAGE Authors", "Lone G"]
readme = "README.md"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONK ZK-Proof algorithm."
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
ark-ec = "0.3.0"
ark-ff = "0.3.0"
ark-poly = "0.3.0"
ark-poly-commit = { version = "0.3.0", default-features = false }
ark-serialize = { version = "0.3.0", features = ["derive"] }
ark-std = { version = "0.3.0", default-features = false }
itertools = { version = "0.12.1", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
thiserror = "1.0.56"
plonk-core = { path = "../plonk-core", default-features = false }

[dev-dependencies]
ark-bn254 = "0.3.0"
ark-bls12-381 = "0.3.0"
bitvec = "1.0.1"
array-init = "2.1.0"

[features]
default = ["std", "asm", "parallel"]
std = [
    "ark-std/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-poly/std",
    "ark-poly-commit/std",
    "ark-serialize/std",
    "itertools/use_std",
    "num-traits/std",
    "plonk-core/std"
]
asm = ["ark-ff/asm", "plonk-core/asm"]
parallel = [
    "ark-std/parallel",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly/parallel",
    "ark-poly-commit/parallel",
    "plonk-core/parallel",
]
trace = ["ark-std/print-trace", "ark-poly-commit/print-trace", "plonk-core/trace"]
