[package]
name = "plonkup-core"
version = "0.1.0"
authors = ["Lone G"]
readme = "README.md"
repository = "https://github.com/zk-garage/plonk"
keywords = ["cryptography", "plonk", "zk-snarks", "zero-knowledge", "crypto"]
categories = ["algorithms", "cryptography", "science"]
description = "A pure-Rust implementation of the PLONKUP ZK-SNARKs algorithm."
license = "MIT OR Apache-2.0"
edition = "2021"

[package.metadata.docs.rs]
# To build locally:
# RUSTDOCFLAGS="--cfg doc_cfg" cargo +nightly doc --all-features --open
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]

[dependencies]
blake2 = "0.9"
md5 = "0.7"
ark-std = { version = "0.3", features = ["std"] }
ark-ec = { version = "0.3", default-features = false }
ark-ff = { version = "0.3", default-features = false }
ark-poly = "0.3"
ark-poly-commit = "0.3"
ark-serialize = { version = "0.3", features = ["derive"] }
backtrace = { version = "0.3", optional = true }
derivative = { version = "2.2.0", default-features = false, features = ["use_core"] }
indexmap = { version = "1.8.1", default-features = false }
itertools = { version = "0.10.1", default-features = false }
merlin = { version = "3.0", default-features = false }
num-traits = "0.2.14"
rand_core = { version = "0.6", default-features = false, features = ["getrandom"] }
rayon = { version = "1.5.3", optional = true }

[dev-dependencies]
ark-bn254 = "0.3"
ark-bls12-377 = "0.3"
ark-bls12-381 = "0.3"
proptest = "1.0.0"
paste = "1.0.6"
tempdir = "0.3"
cfg-if = "0.1"

[features]
# Default Features
default = [
    "asm",
    "itertools/default",
    "parallel",
]

# Raw Assembly
asm = ["ark-ff/asm"]

# Parallelism Features
parallel = [
    "rayon",
    "ark-ec/parallel",
    "ark-ff/parallel",
    "ark-poly-commit/parallel",
    "ark-poly/parallel",
]

# Enable Standard Library
std = [
    "ark-ec/std",
    "ark-ff/std",
]

# Check if Elements Exist in Lookup Table
# Enbale this feature will cost a lot of time
check-lookup = []

# Trace
trace = ["backtrace"]
