[package]
name = "privacy-pools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = { version = "0.3", features = ["std"] }
bitvec = "1.0.0"
itertools = { version = "0.10.1", default-features = false }
plonk-core = { path = "../plonk-core" }
plonk-hashing = { path = "../plonk-hashing" }

[dev-dependencies]
ark-bn254 = "0.3"