[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-ff = "0.3"
array-init = "2.1.0"
plonk-core = { path = "../plonk-core" }
plonk-hashing = { path = "../plonk-hashing" }

[features]
default = ["std"]
std = ["ark-ff/std", "plonk-core/std", "plonk-hashing/std"]
